styles/term-style.css
body {
    background: linear-gradient(to right, #000941, #081178);
}

.center {
    text-align: center;
}

.content-table {
    border-collapse: collapse;
    margin: 25px 0;
    /* Centering Logic */
    margin-left: auto;
    margin-right: auto;
    /* Centering Logic End*/
    font-size: 0.9em;
    min-width: 400px;
}

.content-table thead tr {
    background-color: azure;
    color: blue;
    text-align: left;
}

.content-table th {
    padding: 12px 15px;
    color: rgb(110, 85, 209);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.content-table td {
    padding: 12px 15px;
    color: rgb(168, 148, 246);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.content-table tbody tr {
    border-bottom: 1px solid #4e02ffdd;
}

/* Add highlighting to even numbered elements in rows */
.content-table tbody tr:nth-of-type(even) {
    background-color: rgb(25, 22, 112);
}

.content-table tbody tr:last-of-type {
    border-bottom: 2px solid rgb(198, 184, 255);;
}

.term-label {
    color: azure;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: xx-large;
    text-align: center;
    font-weight: bold;
    /* Centering Logic */
    margin-left: auto;
    margin-right: auto;
    /* Centering Logic End*/
}

.num-apps-label {
    margin-left: 100px;
    color: azure;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: x-large;
    text-align: center;
    font-weight: bold;
    /* Centering Logic */
    /* margin-left: auto; */
    margin-right: auto;
    /* Centering Logic End*/
}

/* Style home button */
.home-btn {
    background-color: rgb(255, 255, 255); /* Blue background */
    border: none; /* Remove borders */
    border-radius: 10px;
    color: rgb(0, 0, 0); /* White text */
    padding: 12px 16px; /* Some padding */
    font-size: 16px; /* Set a font size */
    cursor: pointer; /* Mouse pointer on hover */
}

/* Darker background on mouse-over */
.home-btn:hover {
    background-color: RoyalBlue;
}


/* BUTTONS ON THE LEFT SIDE OF THE PAGE */
.plus-btn {
    display:inline-block;
    width:50px;
    height:50px;
    margin-right: 10px; /* Create distance between undo button next to it*/
    background:
        linear-gradient(#000000 0 0),
        linear-gradient(#000000 0 0),
        #ffffff;
    border-radius:50%;
    background-position:center;
    background-size: 50% 2px,2px 50%; /*thickness = 2px, length = 50% (25px)*/
    background-repeat:no-repeat;
    cursor: pointer;
    margin-left: 10px;
    margin-bottom: 5px;
}

.plus-btn:hover{
    background-color: royalblue;
}

.undo-btn {
    display:inline-block;
    width:50px;
    height:50px;
    margin-right: 10px; /* Create distance between undo button next to it*/
    background:#ffffff;
    border-radius:50%;
    cursor: pointer;
}

.undo-btn:hover{
    background-color: royalblue;
}

.download-btn {
    /* top: -100; */
    margin-left: 10px;
    font-size: larger;
    display: inline-block;
    background-color: white;
    border: none;
    cursor: pointer;
    width: 50px;
    line-height: 50px;
    border-radius: 50px;
}

.download-btn:hover {
    background-color: royalblue;
}

.undo-btn-change {
    cursor: pointer;
    border: none;
    font-size: larger;
    width: 50px;
    line-height: 50px;
    border-radius: 50px;
    margin-left: 10px;
    margin-bottom: 10px;
}

.undo-btn-change:hover {
    background-color: royalblue;
}

.edit-btn {
    margin-top: 10px;
    margin-left: 10px;
    font-size: x-large;
    display: inline-block;
    background-color: white;
    border: none;
    cursor: pointer;
    width: 50px;
    line-height: 50px;
    border-radius: 50px;
}

.edit-btn:hover {
    background: royalblue;
}

.analytics-btn {
    margin-top: 10px;
    margin-left: 10px;
    font-size: x-large;
    display: inline-block;
    background-color: white;
    border: none;
    cursor: pointer;
    width: 50px;
    line-height: 50px;
    border-radius: 50px;
}

.analytics-btn:hover {
    background: royalblue;
}

.upload-btn {
    margin-top: 10px;
    margin-left: 10px;
    font-size: x-large;
    display: inline-block;
    background-color: white;
    border: none;
    cursor: pointer;
    width: 50px;
    line-height: 50px;
    border-radius: 50px;
}

.upload-btn:hover {
    background: royalblue;
}
/* END OF BUTTONS ON THE LEFT SIDE OF THE PAGE */

/* Delete button on the right of each table element*/
.delete-btn {
    color: rgb(0, 0, 0);
    cursor: pointer;
    width: 20px;
    text-align: center;
    background: rgb(255, 255, 255);
    border: none;
    line-height: 20px;
    border-radius: 20px;
}

.delete-btn:hover {
    background-color: royalblue;
}

/* Popup form begin*/
.popup-form {
    background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
    border-radius: 10px;
    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
    opacity: 0;
    position: absolute;
    padding: 20px 30px;
    top: 50%;
    transform: translate(-50%, -50%) scale(0);
    /* transition: 200ms ease-in-out; */
    left: 50%;
    width: 380px;
    z-index: 10; /* Overlay logic */
}

.popup-form .form h2 {
    color: #c7d2fd;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    font-weight: bold;
}

.popup-form.active {
    transform: translate(-50%, -50%) scale(1);
    opacity: 1;
}

.popup-form .close-btn {
    color: rgb(0, 0, 0);
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 10px;
    width: 20px;
    text-align: center;
    background: rgb(255, 255, 255);
    line-height: 20px;
    border-radius: 20px;
}

.popup-form .close-btn:hover {
    background-color: royalblue;
}

.form-element {
    color: lightblue;
    display: block;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    margin-bottom: 10px;
    width: 100%;
}

.popup-form .form .form-element button {
    cursor: pointer;
    width: 100%;
    height: 40px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: large;
}

#overlay {
    position: fixed;
    opacity: 0;
    transition: 200ms ease-in-out;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, .5);
    pointer-events: none;
}

#overlay.active {
    pointer-events: all;
    opacity: 1;
}
/* Popup form end*/

.button-class {
    display: inline-block;
}

.btn-container {
    position: fixed;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
}

/* Begin of the analytics popup */
.analytics-popup {
    background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
    border-radius: 10px;
    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
    opacity: 0;
    position: absolute;
    padding: 20px 30px;
    top: 50%;
    transform: translate(-50%, -50%) scale(0);
    /* transition: 200ms ease-in-out; */
    left: 50%;
    width: 90%;
    height: 90%;
    z-index: 10; /* Overlay logic */
}

.analytics-popup.active {
    transform: translate(-50%, -50%) scale(1);
    opacity: 1;
}

.analytics-popup .close-btn {
    color: rgb(0, 0, 0);
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 10px;
    width: 20px;
    text-align: center;
    background: rgb(255, 255, 255);
    line-height: 20px;
    border-radius: 20px;
}

.analytics-popup .close-btn:hover {
    background-color: royalblue;
}

.analytics-popup h2 {
    color: #c7d2fd;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    font-weight: bold;
}

#chart-canvas {
    width: 50%;
    height: 50%;
}

